--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
     "multer": "^1.4.4",
+    "razorpay": "^2.8.0",
     "sib-api-v3-sdk": "^8.2.1",
     "uuid": "^8.3.2",
     "validator": "^13.7.0"
