--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "multer": "^1.4.4",
     "node-cron": "^3.0.0",
     "razorpay": "^2.8.0",
+    "shortid": "^2.2.16",
     "sib-api-v3-sdk": "^8.2.1",
     "uuid": "^8.3.2",
     "validator": "^13.7.0"
