--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "firebase-admin": "^10.0.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
     "multer": "^1.4.4",
